--- a/force-app/main/default/lwc/p2cAlertComponent/p2cAlertComponent.html
+++ b/force-app/main/default/lwc/p2cAlertComponent/p2cAlertComponent.html
@@ -2,7 +2,7 @@
     <lightning-card title={cardHeading}>
         <div class="slds-notify_alert slds-theme_error" role="alert">
             
-            {number} {message} {isValid}
+            {number} {message} *** {isValid}
             
         </div>
     </lightning-card>
