--- a/force-app/main/default/lwc/p2cAlertComponent/p2cAlertComponent.html
+++ b/force-app/main/default/lwc/p2cAlertComponent/p2cAlertComponent.html
@@ -2,11 +2,7 @@
     <lightning-card title={cardHeading}>
         <div class="slds-notify_alert slds-theme_error" role="alert">
             
-<<<<<<< HEAD
- 
-=======
-            {number} {message} *** {isValid} Testing ACtions
->>>>>>> 8eb9fc88a0324c51b54a12f2e7a871b707495261
+             {number} {message} *** {isValid} Testing Actions - 5:33 PM
             
         </div>
     </lightning-card>
