--- a/force-app/main/default/lwc/helloworld/helloworld.html
+++ b/force-app/main/default/lwc/helloworld/helloworld.html
@@ -2,7 +2,7 @@
     <lightning-card title="HelloWorld" icon-name="custom:custom14">
       <div class="slds-m-around_medium">
         <p>Hello, {greeting}!</p>
-          <p> Sample - Testing </p>
+          <p> Sample - Testing - Update</p>
         <lightning-input label="Name" value={greeting} onchange={changeHandler}></lightning-input>
       </div>
     </lightning-card>
