--- a/force-app/main/default/lwc/helloworld/helloworld.html
+++ b/force-app/main/default/lwc/helloworld/helloworld.html
@@ -1,7 +1,7 @@
 <template>
     <lightning-card title="HelloWorld" icon-name="custom:custom14">
       <div class="slds-m-around_medium">
-        <p>Hello, {greeting}!</p>
+        <p>Vannakam🙏🏼, {greeting}!</p>
           <p> Sample - Testing - New 05-03-2025 10:15AM</p>
         <lightning-input label="Name" value={greeting} onchange={changeHandler}></lightning-input>
       </div>
