Working with LWC

--- a/force-app/main/default/lwc/helloworld/helloworld.html
+++ b/force-app/main/default/lwc/helloworld/helloworld.html
@@ -2,8 +2,16 @@
     <lightning-card title="HelloWorld" icon-name="custom:custom14">
       <div class="slds-m-around_medium">
         <p>Vannakam🙏🏼, {greeting}!</p>
-          <p> Sample - Testing - New 05-03-2025 10:15AM</p>
+          <p> Sample - Testing - New 05-03-2025 07:22AM</p>
         <lightning-input label="Name" value={greeting} onchange={changeHandler}></lightning-input>
+        <img src={imageUrl} alt="My Image"/>
+  
+        <img src="https://media.licdn.com/dms/image/v2/D5603AQHV0Sf8CjvBOQ/profile-displayphoto-shrink_800_800/B56ZXnjtxQGcAg-/0/1743346654867?e=1752105600&v=beta&t=UM8K2I5QuHieIB89i5Apcv0HMU7D94vD0o_9bcUO-a4" alt="External Image"/>
       </div>
+      <div>
+        <iframe width="500" height="250" src="https://www.youtube.com/embed/o9mivPpQlSA" title="Jinguchaa - Lyrical | Thug Life | Kamal Haasan | Mani Ratnam | STR | AR Rahman | RKFI | MT | RG" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div>
+
+
     </lightning-card>
   </template>
