--- a/force-app/main/default/lwc/lmsComponentX/lmsComponentX.html
+++ b/force-app/main/default/lwc/lmsComponentX/lmsComponentX.html
@@ -4,10 +4,11 @@
            <lightning-button label="unsubscribe" onclick={unsubscribeMessage}></lightning-button>
         </div>
         <div class="slds-m-around_medium">
+           <lightning-button label="subscribe" onclick={subscribeMessage}></lightning-button>
+        </div>
+        <div class="slds-m-around_medium">
             Message Recieved : <strong>{recievedMessage}</strong>
         </div>
 
     </lightning-card>
-
-
 </template>
