--- a/force-app/main/default/lwc/helloworld/helloworld.html
+++ b/force-app/main/default/lwc/helloworld/helloworld.html
@@ -1,8 +1,8 @@
 <template>
     <lightning-card title="HelloWorld" icon-name="custom:custom14">
       <div class="slds-m-around_medium">
-        <p>Vannakam🙏🏼, {greeting}!</p>
-          <p> Sample - Testing - New 05-03-2025 07:22AM</p>
+        <p>Vannakam🙏🏼, {greeting} Surekha!!</p>
+          <p> Sample - Testing - New 06-06-2025 07:22AM</p>
         <lightning-input label="Name" value={greeting} onchange={changeHandler}></lightning-input>
         <figcaption>AI Certificate From Static Resource</figcaption>
         <img src={imageUrl} alt="My Image" title="AI Certificate From Static Resource"/>
